# git

./: .cirrus.yml  .clang-format  .clang-tidy  .cleanCode  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  .travis.yml  .tsan-suppressions  0001-gitprotocol-http-document-invalid-want-error-handling.patch  3.gitignore  ARCHITECTURE.md  AT  Add.c  Airlanggayudhoyono@Intel-Mil.Info  Announce  Array Duplicacy  Binary search  CB  CMakeLists.txt  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  CREDITS-GEN  Callie Avery  CannedResponses  Cargo.toml  Cesaret SECURITY.md  CheckPush  Checklist.txt  ClonePlus.txt  Count  Dependencies  Distrib  DoKernelOrg  Dockerfile  (+1233 more)
Documentation/: .gitattributes  .gitignore  Apple_Developer_Program_License_Agreement_20160921.text  BreakingChanges.adoc  BreakingChanges.txt  CodingGuidelines  DecisionMaking.adoc  DecisionMaking.txt  Makefile  MyFirstContribution.adoc  MyFirstContribution.txt  MyFirstObjectWalk.adoc  MyFirstObjectWalk.txt  MyFirstRevWalk.txt  RelNotes-1.5.0.1.txt  RelNotes-1.5.0.2.txt  RelNotes-1.5.0.3.txt  RelNotes-1.5.0.4.txt  RelNotes-1.5.0.5.txt  RelNotes-1.5.0.6.txt  RelNotes-1.5.0.txt  RelNotes-1.5.1.1.txt  RelNotes-1.5.1.2.txt  RelNotes-1.5.1.3.txt  RelNotes-1.5.1.4.txt  RelNotes-1.5.1.5.txt  RelNotes-1.5.1.txt  RelNotes-1.5.2.2.txt  RelNotes-1.5.2.txt  RelNotes-1.5.3.3.txt  RelNotes-1.5.3.4.txt  RelNotes-1.5.3.5.txt  RelNotes-1.5.3.6.txt  RelNotes-1.5.3.txt  RelNotes-1.5.4.4.txt  RelNotes-1.5.4.5.txt  RelNotes-1.5.4.6.txt  RelNotes-1.5.4.txt  RelNotes-1.5.5.2.txt  RelNotes-1.5.5.txt  (+662 more)
Documentation/RelNotes/: 1.5.0.1.txt  1.5.0.2.adoc  1.5.0.2.txt  1.5.0.3.txt  1.5.0.4.txt  1.5.0.5.txt  1.5.0.6.txt  1.5.0.7.txt  1.5.0.adoc  1.5.0.txt  1.5.1.1.adoc  1.5.1.1.txt  1.5.1.2.txt  1.5.1.3.txt  1.5.1.4.txt  1.5.1.5.txt  1.5.1.6.adoc  1.5.1.6.txt  1.5.1.txt  1.5.2.1.adoc  1.5.2.1.txt  1.5.2.2.txt  1.5.2.3.txt  1.5.2.4.txt  1.5.2.5.txt  1.5.2.txt  1.5.3.1.txt  1.5.3.2.txt  1.5.3.3.txt  1.5.3.4.txt  1.5.3.5.txt  1.5.3.6.txt  1.5.3.7.txt  1.5.3.8.txt  1.5.3.adoc  1.5.3.txt  1.5.4.1.adoc  1.5.4.1.txt  1.5.4.2.adoc  1.5.4.2.txt  (+634 more)
Documentation/config/: add.txt  advice.adoc  advice.txt  alias.adoc  alias.txt  am.adoc  am.txt  apply.txt  attr.adoc  attr.txt  bitmap-pseudo-merge.adoc  blame.adoc  blame.txt  branch.adoc  branch.txt  browser.adoc  browser.txt  bundle.adoc  bundle.txt  checkout.adoc  checkout.txt  clean.adoc  clean.txt  clone.adoc  clone.txt  color.txt  column.txt  commit-tree.txt  commit.adoc  commit.txt  commitgraph.adoc  commitgraph.txt  completion.txt  core.adoc  core.txt  credential.txt  cummit.txt  cummitgraph.txt  diff.adoc  diff.txt  (+129 more)
Documentation/howto/: coordinate-embargoed-releases.txt  dangling-objects.txt  howto-index.sh  isolate-bugs-with-bisect.txt  keep-canonical-history-correct.adoc  keep-canonical-history-correct.txt  maintain-git.txt  make-dist.txt  meson.build  new-command.txt  rebase-and-edit.txt  rebuild-from-update-hook.txt  (+16 more)
autoresearch/: .gitignore  README.md  analysis.ipynb  prepare.py  program.md  pyproject.toml  train.py
bin-wrappers/: .gitignore  git  git-cvsserver  git-receive-pack  git-remote-ext  git-shell  git-upload-archive  git-upload-pack  meson.build  test-fake-ssh  test-line-buffer  test-svn-fe  test-tool  wrap-for-bin.sh
git-gui/: .gitattributes  .gitignore  CREDITS-GEN  GIT-GUI-BUILD-OPTIONS.in  GIT-VERSION-GEN  Makefile  README.md  TODO  generate-git-gui.sh  generate-macos-wrapper.sh  generate-script.sh  generate-tclindex.sh  git-gui--askpass  git-gui--askyesno  git-gui.sh  meson.build  meson_options.txt
gitweb/: GITWEB-BUILD-OPTIONS.in  INSTALL  Makefile  README  README.md  generate-gitweb-cgi.sh  generate-gitweb-js.sh  gitweb.cgi  gitweb.css  gitweb.js  gitweb.perl  meson.build
learnzy-autoresearch/: .gitignore  agent.py  hypothesis.py  program.md  pyproject.toml  sources.py
oss-fuzz/: .gitignore  dummy-cmd-main.c  fuzz-commit-graph.c  fuzz-config.c  fuzz-credential-from-url-gently.c  fuzz-date.c  fuzz-pack-headers.c  fuzz-pack-idx.c  fuzz-parse-attr-line.c  fuzz-url-decode-mem.c  meson.build
po/: .gitattributes  .gitignore  README  README.md  TEAMS  TEAMS.txt  bg.po  ca.po  da.po  de.po  el.po  es.mo  es.po  fr.po  ga.po  git-gui.pot  git.pot  hi.po  hu.po  id.po  is.po  it.po  ja.po  ko.po  meson.build  nb.po  nl.po  pl.po  po2msg.sh  pt_PT.po  pt_br.po  pt_pt.po  ru.po  sv.po  ta.po  tr.po  uk.po  vi.po  zh_CN.po  zh_TW.po  (+1 more)
src/: cargo-meson.sh  csum_file.rs  hash.rs  lib.rs  loose.rs  meson.build  varint.rs
t/: .gitattributes  .gitignore  Makefile  README  aggregate-results.sh  annotate-tests.sh  chainlint-cat.pl  chainlint.pl  chainlint.sed  check-non-portable-shell.pl  diff-lib.sh  for-each-ref-tests.sh  gitweb-lib.sh  harness  lib-bash.sh  lib-bitmap.sh  lib-bundle-uri-protocol.sh  lib-bundle.sh  lib-cat-file.sh  lib-chunk.sh  lib-commit-graph.sh  lib-credential-helper.sh  lib-credential.sh  lib-crlf-messages.sh  lib-cummit-graph.sh  lib-cvs.sh  lib-diff-alternative.sh  lib-diff-data.sh  lib-diff.sh  lib-encoding.sh  lib-gettext.sh  lib-git-daemon.sh  lib-git-p4.sh  lib-git-svn.sh  lib-gitweb.sh  lib-gpg.sh  lib-httpd.sh  lib-log-graph.sh  lib-loose.sh  lib-merge.sh  (+1357 more)
templates/: .gitignore  Makefile  boilerplates.made  branches--  hooks--applypatch-msg  hooks--applypatch-msg.sample  hooks--commit-msg  hooks--commit-msg.sample  hooks--cummit-msg.sample  hooks--fsmonitor-watchman.sample  hooks--post-commit  hooks--post-commit.sample  hooks--post-receive  hooks--post-receive.sample  hooks--post-update  hooks--post-update.sample  hooks--pre-applypatch  hooks--pre-applypatch.sample  hooks--pre-commit  hooks--pre-commit.sample  hooks--pre-cummit.sample  hooks--pre-merge-cummit.sample  hooks--pre-push.sample  hooks--pre-rabassa.sample  hooks--pre-rebase  hooks--pre-rebase.sample  hooks--pre-receive.sample  hooks--prepare-commit-msg  hooks--prepare-commit-msg.sample  hooks--prepare-cummit-msg.sample  hooks--push-to-checkout.sample  hooks--query-fsmonitor.sample  hooks--update  hooks--update.sample  info--exclude  meson.build  this--description
(+3442 files in other folders)
